# robot_ui_tools

./: .gitignore
jose/: CMakeLists.txt  package.xml
jose/include/jose/: jose.h  jose_markers.h  robot_to_task_markers.h
jose/launch/: jose_markers.launch  jose_markers.launch.py  jose_test.launch  trac_ik_test.launch.py
jose/meshes/: person_standing2.dae  person_standing_reference.dae
jose/src/: jose.cpp  jose_markers.cpp  jose_markers_node.cpp  jose_test.cpp  robot_to_task_markers.cpp  robot_to_task_markers_node.cpp  trac_ik_test.cpp
jose_gui/: CMakeLists.txt  package.xml  plugin_description.xml
jose_gui/include/jose_gui/: jose_gui.h
jose_gui/src/: jose_gui.cpp
jose_gui/ui/: jose_gui.ui
robots_config/: CMakeLists.txt  package.xml
robots_config/config/curiosity/: curiosity.srdf
robots_config/config/fetch/: fetch.srdf
robots_config/config/panda/: panda.srdf
robots_config/config/panda/srdf/: panda_arm.srdf.xacro  panda_arm.xacro
robots_config/config/panda_husky/: panda_husky.srdf.xacro
robots_config/config/tiago/: tiago_pal-hey5.srdf  tiago_right-arm_pal-gripper_schunk-ft.srdf
robots_config/config/yumi/: yumi.srdf
robots_config/launch/: tiago_test.launch
robots_config/launch/curiosity/: curiosity_config.launch.py
robots_config/launch/fetch/: fetch_config.launch  fetch_config.launch.py  fetch_moveit.launch  fetch_test.launch
robots_config/launch/panda/: panda_config.launch.py  panda_moveit.launch.py
robots_config/launch/panda_husky/: panda_husky_config.launch.py
robots_config/launch/tiago/: tiago_config.launch  tiago_config.launch.py  tiago_moveit.launch  tiago_test.launch
robots_config/launch/yumi/: yumi_config.launch.py
robots_config/robots/curiosity/: curiosity_base_link.urdf.xacro  curiosity_mars_rover.xacro.urdf
robots_config/robots/fetch/: fetch.urdf.xacro
robots_config/robots/panda/: panda.urdf.xacro
robots_config/robots/panda_husky/: panda_husky.urdf.xacro
robots_config/robots/tiago/: tiago.urdf.xacro
robots_config/robots/yumi/: yumi.urdf.xacro
robots_config/rviz/: curiosity.rviz  fetch.rviz  panda.rviz  panda_husky.rviz  tiago.rviz  yumi.rviz
robots_config/urdf/panda/: panda.urdf.xacro
task_ui/: CMakeLists.txt  package.xml
task_ui/config/: curiosity_robot_task.yaml  fetch_robot_task.yaml  panda_husky_robot_task.yaml  tiago_robot_task.yaml
task_ui/include/task_ui/: markers_get_reach_poses.h  markers_get_robot_base.h  robot_task_markers.h  robot_to_task_markers.h  task_ui.h  task_ui_markers.h
task_ui/launch/: task_ui_markers.launch.py  trac_ik_test.launch.py
task_ui/meshes/: person_standing.dae  wine_bottle.dae  wine_bottle_reference.dae
task_ui/src/: markers_get_reach_poses.cpp  markers_get_reach_poses_node.cpp  markers_get_robot_base.cpp  markers_get_robot_base_node.cpp  robot_task_markers.cpp  robot_task_markers_node.cpp  robot_task_ui_params.yaml  robot_to_task_markers.cpp  robot_to_task_markers_node.cpp  task_ui.cpp  task_ui_markers.cpp  task_ui_markers_node.cpp  task_ui_test.cpp
