<?xml version="1.0"?>
<package format="2">
  <name>jose</name>
  <version>1.0.0</version>
  <description>The jose package</description>

  <maintainer email="ana@todo.todo">ana</maintainer>


  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>rviz</depend>
  <depend>srdfdom</depend>
  <depend>trac_ik_lib</depend>
  <depend>visualization_msgs</depend>
  <depend>interactive_markers</depend>
</package>
