<?xml version="1.0"?>
<package format="2">
  <name>jose</name>
  <version>1.0.0</version>
  <description>The jose package</description>

  <maintainer email="mecanita@gmail.com">Ana</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rviz</depend>
  <depend>srdfdom</depend>
  <depend>trac_ik_lib</depend>
  <depend>visualization_msgs</depend>
  <depend>interactive_markers</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
