<?xml version="1.0"?>
<package format="2">
  <name>jose_gui</name>
  <version>1.0.0</version>
  <description>The jose package</description>
  <maintainer email="mecanita@gmail.com">Ana</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>pkg-config</buildtool_depend>
  
  <depend>geometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>roslib</depend>  
  <depend>rviz</depend>
  <depend>srdfdom</depend>
  <depend>trac_ik_lib</depend>
  <depend>visualization_msgs</depend>


  <export>
    <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
  
</package>
