<?xml version="1.0"?>
<package format="3">
  <name>robots_config</name>
  <version>1.0.0</version>
  <description>The robots_config package</description>

  <maintainer email="mecanita@gmail.com">Ana C.H.Q.</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>xacro</exec_depend>
  <exec_depend>rviz2</exec_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
  
</package>
