<?xml version="1.0"?>
<package format="2">
  <name>robots_config</name>
  <version>1.0.0</version>
  <description>The robots_config package</description>

  <maintainer email="ana@traclabs.com">ana</maintainer>

  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>xacro</depend>

</package>
